Add bookshelf command
